--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "dev": "HOST=0.0.0.0 nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "clean": "rimraf node_modules pnpm-lock.yaml .nuxt"
   },
   "devDependencies": {
     "nuxt": "^3.2.2"
@@ -18,6 +19,7 @@
     "@types/node": "^18.14.0",
     "pinia": "^2.0.31",
     "quasar": "^2.11.6",
+    "rimraf": "^4.1.2",
     "sass": "1.32.12"
   }
 }
